--- a/FT-M2-master/02-CSS/homework/responsive-web/index.html
+++ b/FT-M2-master/02-CSS/homework/responsive-web/index.html
@@ -8,7 +8,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
@@ -17,12 +17,21 @@
 <body>
 
  <!-- Código del nav acá -->
-
+ <span class="mainSpan">
+  <h1 class="title">Musica 8D</h1>
+    <nav class="Navbar">
+      <div>inicio</div>
+      <div>sobre nosotos</div>
+      <div>blog</div>
+      <div>contacto</div>
+      <div>registrarse</div>
+    </nav>
+</span> 
   <div class="container home">
 
     <header class="intro">
        <!-- Código de header img acá -->
-      
+       <img src="img/main-header.png">
       <h2>Nueva tecnología</h2>
 
       <p>En estos días se viralizaron nuevas versiones de temas que, escuchados con auriculares, suenan de una manera muy diferente a la original. ¿Aún no escuchaste? Sorprendete</p>
